Fixing glitches on mobile

--- a/css/experience.css
+++ b/css/experience.css
@@ -11,32 +11,24 @@
 
 .experienceItem
 {
-  position: relative;
+  position: absolute;
   margin-top: 7.5ex;
+
+  opacity: 0;
 }
 
 .companyLogo
 {
   margin-top: .5ex;
   margin-inline: 5ex;
-  width: 5ex;
   height: 5ex;
 }
 
-
-.experienceTitle
+.experiencePeriod
 {
-
-  color: rgb(75, 75, 75);
-  font-size: 2.5ex;
-  font-style: italic;
-  font-weight: bold;
-}
-
-.experienceSubtitle
-{
-  color: rgb(75, 75, 75);
-  font-size: 2.25ex;
+  margin-top: 1.5ex;
+  
+  font-size: 2ex; 
   font-style: italic;
 }
 
@@ -48,33 +40,4 @@
   color:rgb(75, 75, 75);
   font-size: 2ex;
   font-weight: bold;
-}
-
-.experienceDescript
-{
-  color:rgb(75, 75, 75);
-  font-size: 2ex;
-}
-
-.experienceRole
-{
-  color: rgb(75, 75, 75);
-  width: 58ex;
-  font-size: 1.75ex;
-}
-
-.experienceRole ul li
-{
-  margin-bottom: 1ex;
-}
-
-
-
-@media screen and (max-height: 900px)
-{
-  .experienceRole
-  {
-    width: 35ex;
-    height: 60%;
-  }
 }
